ballzone/css/drag.css
h3 {
    font-weight: bold;
    line-height: 100%;
    text-align: center;
}


.ribbon {
    position: fixed;
    width: 100%;
    z-index: 900;
}

.drag {
    z-index: 100;
    color: #333;
    line-height: 14px;
    border-radius: 25px;
    width: 100px;
    height: 100px;
    cursor: move;
}

.drag-wrap {
    width: 100px;
    height: 100px;
    vertical-align: top;
    display: inline-block;
    margin: 0 25px 60px;
}

.drag img {
    height: 100px;
    width: 100px;
    border-radius: 25px;
}

.office, .candidate {
    letter-spacing: -0.5px;
    display: block;
    position: relative;
    left: -25px;
    width: 150px;
}

.office {
    font-size: 12px;
}

.candidate {
    font-weight: bold;
    text-transform: uppercase;
}

.drop {
    position: relative;
    vertical-align: top;
    color: #ddd;
    display: inline-block;
    width: 100px;
    height: 100px;
    border: solid 1px #ddd;
    border-radius: 25px;
    margin: 18px 25px 0;
}

.drop .office {
    display: none;
}

.hover {
    background-color: #ccc;
    color: #fff;
}

.drop .drag::before {
    line-height: 38px;
    height: 36px;
    width: 36px;
    position: absolute;
    left: -18px;
    top: 0px;
    color: #fff;
    font-size: 24px;
    font-weight: bold;
    border-radius: 20px;
    box-shadow: 0px 2px 10px #555;
    border: solid 2px #fff;
}

.drop1 .drag::before {
    content: "1";
}

.drop2 .drag::before {
    content: "2";
}

.drop3 .drag::before {
    content: "3";
}

.write-in {
    width: 90px !important;
    font-size: 12px !important;
    padding: 0px 4px !important;
    margin-top: 0px !important;
}

/*@media only screen and (max-width: 767px) {
  h3 { font-size: 24px; }
  .monitor { display: none; }
  #red-ribbon h3 { font-size: 18px; letter-spacing: -1px; padding: 10px 0; }
  #drop-div h3 { padding: 30px 0; }
}

@media only screen and (min-width: 768px) {
  #red-ribbon h3 { padding: 5px 0; }
  #drop-div h3 { padding: 30px 0; }
}

@media only screen and (max-width: 479px) {
  .drop, .drag, .drag img { width: 80px; height: 80px; }
  .drop { margin: 33px 15px 0; font-size: 60px; line-height: 80px; }
  .office, .candidate { width: 130px; font-size: 11px; }
  .top-three { margin-top: 15px; }
}*/

.drop1 { margin-left: 0px; }
.drop3 { margin-right: 0px; }

